# lib_fhir

./: LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
lib_fhir/: __init__.py  __main__.py  fhir.py  fhir_drill_patient.py  fhir_hapi_patient.py  fhir_patient.py
lib_fhir/tests/: test_main.py
scripts/: fhir.py  final.py  test.py  test.txt  test_patient.xml  upload.sh  upload_drill.sh  upload_hapi.sh  upload_hapi_og.sh  upload_response.txt
