# setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = lib_fhir
author = Justin Furuness, Christina Gorbenko
author_email = jfuruness@gmail.com
description = FHIR data manipulation
version = 0.0.1
url = https://github.com/jfuruness/lib_fhir

keywords = 
    5810
    FHIR
    UConn
    Furuness

classifiers = 
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

license = BSD
license_files = LICENSE

long_description = README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
# Mypy won't work if this is True
zip_safe = False
# Include extras in Manfest.in
include_package_data = True
install_requires =
    requests

description-file = README.md

[options.entry_points]
console_scripts =
    lib_fhir = lib_fhir.__main__:main

# https://stackoverflow.com/a/30539963/8903959
[options.extras_require]
test = 
    pytest==6.2.5
    requests
    types-requests==2.26.1
    pytest-cov==3.0.0
    mypy==0.910
    flake8==4.0.1
    tox==3.24.4
    pytest-xdist==2.5.0
    pytest-progress


[options.package_data]
lib_fhir = py.typed

[flake8]
max-line-length = 79

[coverage:run]
branch = True
omit = 
    *tests*
    *__init__*

[coverage:report]

show_missing = True

exclude_lines =
    # Excludes lines overrides pragma: no cover, so add it back
    pragma: no cover

    # Code below this is not meant to be tested
    raise NotImplementedError

    # Code that isn't meant to be run
    if __name__ == .__main__.:
